# agentic-meter-reader

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
compose/meter/: Dockerfile  start
config/: config.yaml  residents.yaml
docs/: innsending-vannmaler.md
src/agents/meter/: __init__.py  agent.py  archive.py  consensus.py  main.py  models.py  pipeline.py  prompts.py  replies.py  repository.py  skills.py
src/utils/: __init__.py  gmail.py  llm.py  s3.py  sql.py
tests/: conftest.py  test_consensus.py  test_meter_agent.py  test_pipeline.py  test_repository.py  test_triage.py
