[project]
name = "agentic-meter-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22,<0.4",
    "anthropic>=0.109.1",
    "boto3>=1.43.28",
    "click>=8.4.1",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "polars>=1.41.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
